@@ -4,6 +4,8 @@
 
 == rufus-json - 0.2.4    not yet released
 
+- Rufus::Json.encode(o, opts={}) options are accessible
+
 
 == rufus-json - 0.2.3    released 2010/06/29
 
